<resources>
    <string name="app_name">Cryptocurrencies</string>
    <string name="settings">Settings</string>
    <string name="main">Main</string>
    <string name="cryptocurrencies">Cryptocurrencies</string>
    <string name="save_user_error">Name must be between 1 and 20 characters long</string>
    <string name="save_user_success">User successfully saved</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="save">Save</string>
    <string name="select_your_birth_day">Select your birth day</string>
...
